Fix collapsed navbar icon
The icon was too dark for the background, so it was replaced with one whose colour could be modified

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
     margin: 5px 5px;
 }
 
-footer i {
+i {
     color: #b58900;
 }
 
